# rqbit

./: .gitignore  Cargo.toml  Makefile
crates/cdn_client/: Cargo.toml
crates/cdn_client/src/: client.rs  client_cdn.rs  lib.rs  main.rs  s3_client.rs
crates/librqbit/src/: lib.rs  peer_connection.rs
crates/librqbit/src/torrent_state/: mod.rs
crates/librqbit/webui/src/: rqbit-web.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
desktop/src/components/: VideoPlayer.tsx
