[package]
name = "cdn_client"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.1.9"
aws-sdk-s3 = "1.21.0"
futures = "0.3.30"
sqlx = {version = "0.7.4",  features = ["runtime-tokio-native-tls", "sqlite"] }
tauri = "1.6.1"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
librqbit = { path = "../librqbit" }
librqbit-core = { path = "../librqbit_core"}
chrono = "0.4.37"
anyhow = "1.0.81"
